@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50calc-gentoo.el 838 RMD160 34e9e0ef6be937eb446fe60a9dd154512925c184 SHA1 ef34d664c706ce057c16e13ee6a58b3acdc8e43d SHA256 af9421de7a52ee54d5643a16d2391bc7b870c19f5845eb05b439e3142fa0ea90
 MD5 aed87816cba8039ddb67c700227a60dd files/50calc-gentoo.el 838
 RMD160 34e9e0ef6be937eb446fe60a9dd154512925c184 files/50calc-gentoo.el 838
@@ -11,14 +14,14 @@ MD5 74b73dc3b5dffde70424a19d6f477a83 files/calc-2.02f-info-dir.patch 301
 RMD160 56a619a319f036ccbbc5fc8f21a8380b807cf68e files/calc-2.02f-info-dir.patch 301
 SHA256 cac6ee1a91324f2001c1d991bb7b9bba24ae6eae36ee554fbbc9e252fdbabbaf files/calc-2.02f-info-dir.patch 301
 DIST calc-2.02f.tar.gz 831865 RMD160 4ca65723de4a5c3f8ebb3c61191185b48ddb1009 SHA1 1a1d54fb90725aacaf1c9308a94be4b813ac4880 SHA256 774231cdf06999d3a7cbfae69a1afe469497a6bc7d2e6cb90de922dd3ae5e67d
-EBUILD calc-2.02f.ebuild 804 RMD160 733efc0410c96c8bea8d0674e040a3f645dd0c7b SHA1 03a8456369706311822f699431b1c9f26b2b0906 SHA256 4a0763768fafefebf55e885f0cacd4217623a0a3499ecfa873bf9030eed24e72
-MD5 de062e6c4af67047056fda9fd39b1d15 calc-2.02f.ebuild 804
-RMD160 733efc0410c96c8bea8d0674e040a3f645dd0c7b calc-2.02f.ebuild 804
-SHA256 4a0763768fafefebf55e885f0cacd4217623a0a3499ecfa873bf9030eed24e72 calc-2.02f.ebuild 804
-MISC ChangeLog 603 RMD160 64775bc13e7d1c54fb4005862041565466c202ac SHA1 dea0bc5f594455163abea6c66230dd5b7408de15 SHA256 4034ca80172e5a33641e924e290472e3954f132df25990a397211d76aabcee60
-MD5 8ecddeba3ab3943d99eb7b391d13b1e9 ChangeLog 603
-RMD160 64775bc13e7d1c54fb4005862041565466c202ac ChangeLog 603
-SHA256 4034ca80172e5a33641e924e290472e3954f132df25990a397211d76aabcee60 ChangeLog 603
+EBUILD calc-2.02f.ebuild 828 RMD160 7500e7a5aea3cfd34519313e4a86b3d8ed9dea72 SHA1 7a2766a8e7d6f7bdcca7b8e2626709fab2ce1c39 SHA256 64e78487ccd34b772458829c9feaece3305dd9e658f87d88bd540d7decb3df83
+MD5 34634683a7a8dd533fbc14ed13ac6d14 calc-2.02f.ebuild 828
+RMD160 7500e7a5aea3cfd34519313e4a86b3d8ed9dea72 calc-2.02f.ebuild 828
+SHA256 64e78487ccd34b772458829c9feaece3305dd9e658f87d88bd540d7decb3df83 calc-2.02f.ebuild 828
+MISC ChangeLog 718 RMD160 3a96bf5c30751c8ee7f49f717e8091e34d5784bc SHA1 1430bea0fb127e001ecca80163de19cdcf1a24cd SHA256 257fc88579652e0df12b708c664b4a8c50d04a081adf3ad4e934a4b4d77ab5aa
+MD5 3c78e7fcf29907aae978c8e8c92de198 ChangeLog 718
+RMD160 3a96bf5c30751c8ee7f49f717e8091e34d5784bc ChangeLog 718
+SHA256 257fc88579652e0df12b708c664b4a8c50d04a081adf3ad4e934a4b4d77ab5aa ChangeLog 718
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -26,3 +29,10 @@ SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata
 MD5 e10f23f7a31da2d7fe3a093d10c735c0 files/digest-calc-2.02f 232
 RMD160 a91f6b5456a5c0d178a58835dbd79142804537ac files/digest-calc-2.02f 232
 SHA256 35229710c01ffb4714853ed35d29eed785f41c37f1c413cf753ddbcba864b505 files/digest-calc-2.02f 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFGjCJJNQqtfCuFneMRAhudAJ0eNZ/5rGjP0cItC3QemkY5wL3UYwCfVNaa
+rX7Z4ua9cqFSC8ImZ6XffnQ=
+=Dbtk
+-----END PGP SIGNATURE-----
