@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/calc
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.2 2006/12/10 17:43:51 welp Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.3 2007/07/04 22:42:11 opfer Exp $
+
+  04 Jul 2007; Christian Faulhammer <opfer@gentoo.org> calc-2.02f.ebuild:
+  added some quotes; added die comment
 
   10 Dec 2006; Peter Weller <welp@gentoo.org> calc-2.02f.ebuild:
   Added ~amd64 keyword wrt bug #127269
